--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-snipcart": "^1.1.2",
+    "gatsby-plugin-snipcartv3": "^2.3.3",
     "gatsby-source-contentful": "^2.3.51",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
